--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,6 +5,8 @@ name: Python application
 
 on:
   workflow_dispatch:
+  push:
+    branches: master
   schedule:
     - cron: 0 * * * *
     
@@ -26,8 +28,6 @@ jobs:
     
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
-      with:
-        poetry-version: ${{ matrix.poetry-version }}
     
     - name: Install dependencies
       run: |
