--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8]
+        poetry-version: [1.1.2]
     runs-on: ubuntu-latest
 
     steps:
@@ -28,11 +29,20 @@ jobs:
     
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
     
     - name: Install dependencies
       run: |
         poetry install
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
     - name: Build website
       run: poetry run python app.py
+
+    - name: Push
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add .
+        git commit -m "CI auto build"
+        git push
