--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.poetry-version }}
+        python-version: ${{ matrix.python-version }}
     
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
