--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,33 +9,29 @@ on:
     branches: master
   schedule:
     - cron: 0 * * * *
-    
+
 
 jobs:
   build:
-    strategy:
-      matrix:
-        python-version: [3.8]
-        poetry-version: [1.1.2]
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    
+        python-version: 3.8
+
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
       with:
-        poetry-version: ${{ matrix.poetry-version }}
-    
+        poetry-version: 1.1.2
+
     - name: Install dependencies
       run: |
         poetry install
-    
+
     - name: Build website
       run: poetry run python app.py
 
