--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Keto Zhang <keto.zhang@gmail.com>"]
 python = "^3.8"
 Flask = "^1.1.2"
 feedparser = "^6.0.2"
+Frozen-Flask = "^0.15"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
